# fjarm

./: .bazelignore  .bazelrc  .gitignore  .infisical.json  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  buf.yaml  build.gradle.kts  docker-compose.yaml  go.mod  go.sum  gradle.properties  kind-config.yaml  maven_install.json  settings.gradle.kts
.github/: CODEOWNERS  dependabot.yaml
.ijwb/: .bazelproject
android/: .gitignore  AGENTS.md  (+2 more)
api/: BUILD.bazel  go.mod  go.sum
api/cmd/helloworld/: BUILD.bazel  main.go
api/cmd/helloworld/v1/: BUILD.bazel  main.go
api/cmd/users/v1/: BUILD.bazel  main.go
api/deployment/helloworld/: BUILD.bazel  fly.toml  helloworld.tmpl
api/deployment/helloworld/v1/: BUILD.bazel
api/internal/authentication/pkg/v1/: BUILD.bazel  common_errors.go  hash_params.go  passwords.go  passwords_test.go  salt.go  salts.go
api/internal/authentication/v1/pkg/passwords/: BUILD.bazel  common_errors.go  hash_params.go  passwords.go  passwords_test.go  salts.go
api/internal/cache/: BUILD.bazel  cache_errors.go
api/internal/cache/v1/: BUILD.bazel  cache_errors.go
api/internal/cache/v1/pkg/: BUILD.bazel  cache_errors.go
api/internal/cache/v1/pkg/remote/: BUILD.bazel  fake_redis_cache.go  fake_redis_lock.go  redis_cache.go  redis_cache_test.go  redis_client.go  redis_lock.go  redis_lock_test.go  redis_setup_test.go  redis_utils.go
api/internal/cache/v1/remote/: BUILD.bazel  redis_cache.go  redis_cache_test.go
api/internal/helloworld/: BUILD.bazel  repository.go  repository_test.go  service.go  service_test.go
api/internal/helloworld/v1/: BUILD.bazel  connect_rpc_handler.go  connect_rpc_handler_test.go  grpc_handler.go  grpchandler.go  grpchandler_test.go  in_memory_repository.go  in_memory_repository_test.go  interactor.go  interactor_test.go  repository.go  service.go  service_test.go
api/internal/helloworld/v1/cmd/helloworld/: BUILD.bazel  main.go
api/internal/helloworld/v1/deployment/: .env  docker-compose.yml
api/internal/helloworld/v1/deployment/flyio/: fly.toml
api/internal/helloworld/v1/deployment/ghcr/: BUILD.bazel
api/internal/helloworld/v1/internal/helloworld/: BUILD.bazel  common_errors.go  connect_rpc_handler.go  connect_rpc_handler_test.go  in_memory_repository.go  in_memory_repository_test.go  interactor.go  interactor_test.go
api/internal/logkeys/: BUILD.bazel  logkeys.go
api/internal/logvals/: BUILD.bazel  logvals.go
api/internal/obfuscation/pkg/: BUILD.bazel  connect_rpc_ambiguous_timing_interceptor.go  connect_rpc_ambiguous_timing_interceptor_test.go
api/internal/obfuscation/v1/pkg/: BUILD.bazel  connect_rpc_ambiguous_timing_interceptor_benchmark_test.go  delay_duration.go
api/internal/obfuscation/v1/pkg/interceptor/: BUILD.bazel  connect_rpc_ambiguous_timing_interceptor.go  connect_rpc_ambiguous_timing_interceptor_benchmark_test.go  connect_rpc_ambiguous_timing_interceptor_test.go  connect_rpc_constant_timing_interceptor.go  connect_rpc_constant_timing_interceptor_benchmark_test.go  connect_rpc_constant_timing_interceptor_test.go  delay_duration.go
api/internal/pkg/helloworld/v1/: BUILD.bazel
api/internal/redis/v1/client/: BUILD.bazel  redis_client.go
api/internal/redis/v1/pkg/client/: BUILD.bazel
api/internal/redis/v1/pkg/startup/: BUILD.bazel  redis.conf  redis_config.go  redis_config_bootstrap.go  redis_config_commands.go  redis_config_file.go  redis_config_user.go  redis_startup.go  redis_startup_errors.go  redis_startup_test.go
api/internal/tracing/: BUILD.bazel  common_errors.go  request_id.go
api/internal/tracing/pkg/interceptor/: BUILD.bazel  common_errors.go  connect_rpc_request_id_interceptor.go  connect_rpc_request_id_interceptor_test.go  grpc_request_id_interceptor.go  grpc_request_id_interceptor_test.go  request_id.go
api/internal/tracing/v1/pkg/: BUILD.bazel  request_id.go
api/internal/tracing/v1/pkg/interceptor/: BUILD.bazel  common_errors.go  connect_rpc_request_id_interceptor.go  connect_rpc_request_id_interceptor_test.go
api/internal/tracing/v1/pkg/requestid/: BUILD.bazel  request_id.go
api/internal/users/v1/: BUILD.bazel  common_errors.go  connect_rpc_handler.go  connect_rpc_handler_test.go  domain.go  domain_test.go  grpc_handler.go  in_memory_repository.go  in_memory_repository_test.go  user.go  user_test.go  utils.go
api/internal/users/v1/cmd/users/: BUILD.bazel
api/internal/users/v1/internal/users/: BUILD.bazel  common_errors.go  connect_rpc_handler.go  connect_rpc_handler_test.go  domain.go  domain_test.go  in_memory_repository.go  in_memory_repository_test.go  user.go  user_test.go  utils.go
api/pkg/fjarm/consistency/consistencyv1/: BUILD.bazel  consistency.go  entity_tag_test.go
api/pkg/fjarm/consistency/v1/: BUILD.bazel  entity_tag_test.go
api/pkg/fjarm/helloworld/helloworldv1/: BUILD.bazel  helloworld.go  helloworld_test.go
api/pkg/fjarm/helloworld/v1/: BUILD.bazel  helloworld_test.go
api/pkg/fjarm/idempotency/idempotencyv1/: BUILD.bazel  idempotency.go  idempotency_key_test.go
api/pkg/fjarm/idempotency/v1/: BUILD.bazel  idempotency_key_test.go
api/pkg/fjarm/users/usersv1/: BUILD.bazel  common_errors.go  create_user_request_test.go  user_email_address_test.go  user_full_name_test.go  user_handle_test.go  user_id_test.go  user_password_test.go  user_test.go  users.go  utils.go
api/pkg/fjarm/users/v1/: BUILD.bazel  common_errors.go  create_user_request_test.go  user_email_address_test.go  user_full_name_test.go  user_id_test.go  user_password_test.go  user_test.go  users.go
api/pkg/helloworld/v1/: BUILD.bazel  helloworld_test.go
api/pkg/users/v1/: BUILD.bazel  user_email_address_test.go  user_full_name_test.go  user_handle_test.go  user_id_test.go
api/pkg/userservice/v1/: BUILD.bazel  user_full_name_test.go  user_id_test.go
api/tools/: BUILD.bazel  tools.go
proto/dummy/v1/: BUILD.bazel  dummy.proto  dummy_service.proto
proto/helloworld/helloworld/v1/: BUILD.bazel  helloworld.proto  helloworld_service.proto
proto/userservice/userservice/v1/: BUILD.bazel  user_id.proto
tools/toolchains/: BUILD.bazel
(+266 files in other folders)
