# gazelle:prefix github.com/fjarm/fjarm

load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        # SEE: https://github.com/bazelbuild/bazel-gazelle/issues/1409
        # "@gazelle//language/proto",  # Built-in rule from gazelle for Protos.
        # Any languages that depend on Gazelle's proto plugin must come after it.
        # "@rules_buf//gazelle/buf:buf",  # Loads the Buf extension
        "@gazelle//language/go",  # Built-in rule from gazelle for Golang.
    ],
    visibility = ["//visibility:public"],
)
