load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tools",
    srcs = ["tools.go"],
    importpath = "github.com/fjarm/fjarm/api/tools",
    visibility = ["//visibility:public"],
    deps = [
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
    ],
)
