load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "helloworld_lib",
    srcs = ["main.go"],
    importpath = "github.com/fjarm/fjarm/api/cmd/helloworld",
    visibility = ["//visibility:private"],
    deps = [
        "//api/internal/helloworld",
        "//api/pkg/helloworld/v1:helloworld_library",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "helloworld",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:public"],
)
