load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

go_library(
    name = "helloworld_lib",
    srcs = ["main.go"],
    importpath = "github.com/fjarm/fjarm/api/cmd/helloworld",
    visibility = ["//visibility:private"],
    deps = [
        "//api/internal/helloworld",
        "@build_buf_gen_go_fjarm_fjarm_grpc_go//helloworld/v1/helloworldv1grpc",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "helloworld",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:private"],
)

go_cross_binary(
    name = "helloworld_linux_arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = ":helloworld",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "helloworld_linux_amd64",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":helloworld",
    visibility = ["//visibility:public"],
)
