load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "helloworld",
    srcs = [
        "repository.go",
        "service.go",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/helloworld",
    visibility = ["//api:__subpackages__"],
    deps = [
        "//api/pkg/helloworld/v1:helloworld_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "helloworld_test",
    srcs = [
        "repository_test.go",
    ],
    embed = [
        ":helloworld",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/helloworld",
    visibility = [
        "//api:__subpackages__",
    ],
    deps = [
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
