load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tracing",
    srcs = [
        "common_errors.go",
        "request_id.go",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/tracing",
    visibility = ["//api:__subpackages__"],
    deps = ["@com_connectrpc_connect//:connect"],
)
