load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "dummy_proto",
    srcs = [
        "dummy.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

proto_library(
    name = "dummy_service_proto",
    srcs = [
        "dummy_service.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":dummy_proto_lib",
        "@com_google_protobuf//:empty_proto",
    ],
)
