load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")

proto_library(
    name = "dummy_proto",
    srcs = [
        "dummy.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@buf_deps//buf/validate:validate_proto",
    ],
)

buf_lint_test(
    name = "dummy_lint",
    config = "//proto:buf.yaml",
    targets = [
        ":dummy_proto",
    ],
)

proto_library(
    name = "dummy_service_proto",
    srcs = [
        "dummy_service.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":dummy_proto",
        "@buf_deps//buf/validate:validate_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

buf_lint_test(
    name = "dummy_service_lint",
    config = "//proto:buf.yaml",
    targets = [
        ":dummy_service_proto",
    ],
)
