load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "helloworld",
    srcs = [
        "repository.go",
        "service.go",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/helloworld/v1",
    visibility = ["//api:__subpackages__"],
    deps = [
        "@build_buf_gen_go_fjarm_fjarm_grpc_go//fjarm/helloworld/v1/helloworldv1grpc",
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/helloworld/v1:helloworld",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "helloworld_test",
    srcs = ["service_test.go"],
    embed = [
        ":helloworld",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/helloworld/v1",
    visibility = [
        "//api:__subpackages__",
    ],
    deps = [
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
