load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "users",
    srcs = [
        "common_errors.go",
        "connect_rpc_handler.go",
        "domain.go",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/users/v1",
    visibility = ["//api:__subpackages__"],
    deps = [
        "//api/internal/logkeys",
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/users/v1:users",
        "@com_connectrpc_connect//:connect",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
    ],
)
