load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "users",
    srcs = [
        "common_errors.go",
        "connect_rpc_handler.go",
        "domain.go",
        "in_memory_repository.go",
        "user.go",
        "utils.go",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/users/v1",
    visibility = ["//api:__subpackages__"],
    deps = [
        "//api/internal/authentication/pkg/v1:pkg",
        "//api/internal/logkeys",
        "//api/internal/logvals",
        "//api/internal/tracing",
        "//api/pkg/fjarm/users/usersv1",
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/consistency/v1:consistency",
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/users/v1:users",
        "@com_connectrpc_connect//:connect",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "users_test",
    srcs = [
        "connect_rpc_handler_test.go",
        "domain_test.go",
        "in_memory_repository_test.go",
        "user_test.go",
    ],
    embed = [":users"],
    deps = [
        "@build_buf_gen_go_fjarm_fjarm_connectrpc_go//fjarm/users/v1/usersv1connect",
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/idempotency/v1:idempotency",
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/users/v1:users",
        "@com_connectrpc_connect//:connect",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
