load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "helloworld_library",
    srcs = ["helloworld.go"],
    embed = [":helloworld_service_proto"],
    importpath = "github.com/fjarm/fjarm/api/pkg/helloworld/v1",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "helloworld_test",
    srcs = ["helloworld_test.go"],
    importpath = "github.com/fjarm/fjarm/api/pkg/helloworld/v1",
    deps = [
        "@build_buf_gen_go_fjarm_helloworld_protocolbuffers_go//helloworld/v1:helloworld",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
    ],
)

go_proto_library(
    name = "helloworld_service_proto",
    compilers = [
        "@rules_go//proto:go_grpc",
    ],
    importpath = "github.com/fjarm/fjarm/api/pkg/helloworld/v1",
    protos = [
        "//proto/helloworld/helloworld/v1:helloworld_proto",
        "//proto/helloworld/helloworld/v1:helloworld_service_proto",
    ],
    deps = [
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
    ],
)
