load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "users",
    srcs = ["users.go"],
    importpath = "github.com/fjarm/fjarm/api/pkg/users/v1",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "users_test",
    srcs = [
        "user_email_address_test.go",
        "user_full_name_test.go",
        "user_handle_test.go",
        "user_id_test.go",
    ],
    embed = [":users"],
    importpath = "github.com/fjarm/fjarm/api/pkg/users/v1",
    deps = [
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/users/v1:users",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_google_uuid//:uuid",
    ],
)
