load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "userservice",
    srcs = ["userservice.go"],
    importpath = "github.com/fjarm/fjarm/api/pkg/userservice/v1",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "userservice_test",
    srcs = ["user_id_test.go"],
    embed = [":userservice"],
    importpath = "github.com/fjarm/fjarm/api/pkg/userservice/v1",
    deps = [
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//userservice/v1:userservice",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_google_uuid//:uuid",
    ],
)
