load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "helloworld_proto",
    srcs = [
        "helloworld.proto",
    ],
    strip_import_prefix = "/proto/helloworld",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@buf_deps//buf/validate:validate_proto",
    ],
)

buf_lint_test(
    name = "helloworld_lint",
    config = "//proto:buf.yaml",
    module = "helloworld",
    targets = [
        ":helloworld_proto",
    ],
)

proto_library(
    name = "helloworld_service_proto",
    srcs = [
        "helloworld_service.proto",
    ],
    strip_import_prefix = "/proto/helloworld",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":helloworld_proto",
        "@buf_deps//buf/validate:validate_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

buf_lint_test(
    name = "helloworld_service_lint",
    config = "//proto:buf.yaml",
    module = "helloworld",
    targets = [
        ":helloworld_service_proto",
    ],
)
