load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "helloworld_proto",
    srcs = [
        "helloworld.proto",
    ],
    strip_import_prefix = "/proto/helloworld",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@buf_deps//buf/validate:validate_proto",
    ],
)

proto_library(
    name = "helloworld_service_proto",
    srcs = [
        "helloworld_service.proto",
    ],
    strip_import_prefix = "/proto/helloworld",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":helloworld_proto",
        "@buf_deps//buf/validate:validate_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)
