load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = [
        "common_errors.go",
        "hash_params.go",
        "passwords.go",
        "salts.go",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/authentication/pkg/v1",
    visibility = ["//api:__subpackages__"],
    deps = ["@org_golang_x_crypto//argon2"],
)

go_test(
    name = "pkg_test",
    srcs = ["passwords_test.go"],
    embed = [":pkg"],
)
