load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "remote",
    srcs = [
        "fake_redis_cache.go",
        "redis_cache.go",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/cache/v1/remote",
    visibility = ["//api:__subpackages__"],
    deps = [
        "//api/internal/cache/v1:cache",
        "//api/internal/logkeys",
        "@com_github_redis_rueidis//:rueidis",
    ],
)

go_test(
    name = "remote_test",
    srcs = ["redis_cache_test.go"],
    embed = [":remote"],
    deps = [
        "//api/internal/cache/v1:cache",
        "//api/internal/logkeys",
        "//api/internal/redis/v1/pkg/client",
        "@com_github_redis_rueidis//:rueidis",
        "@com_github_testcontainers_testcontainers_go_modules_redis//:redis",
    ],
)
