#load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "helloworld_service_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/pkg/helloworld/v1",
    protos = [
        "//proto/helloworld/v1:helloworld_proto",
        "//proto/helloworld/v1:helloworld_service_proto",
    ],
    deps = [
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
    ],
)

#go_library(
#    name = "helloworld",
#    embed = [":v1_go_proto"],
#    importpath = "github.com/fjarm/fjarm/api/internal/pkg/helloworld/v1",
#    visibility = ["//:__subpackages__"],
#)
