load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "interceptor",
    srcs = [
        "common_errors.go",
        "connect_rpc_request_id_interceptor.go",
    ],
    importpath = "github.com/fjarm/fjarm/api/internal/tracing/pkg/interceptor",
    visibility = ["//api:__subpackages__"],
    deps = [
        "//api/internal/logkeys",
        "//api/internal/tracing",
        "@com_connectrpc_connect//:connect",
    ],
)

go_test(
    name = "interceptor_test",
    srcs = ["connect_rpc_request_id_interceptor_test.go"],
    embed = [":interceptor"],
    deps = ["@com_connectrpc_connect//:connect"],
)
